# python_init

./: .gitignore  README.md  pyproject.toml  sqlc.yaml
src/app/: __init__.py  test_init.py
src/infrastructure/dao/: test_query.py
src/infrastructure/dao/sql/: query.sql  schema.sql
src/init/: __init__.py  mypy.py
