[project]
name = "init"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "PorcoRosso85", email = "1.is.universe@gmail.com" }
]
dependencies = [
    "psycopg[binary]>=3.1.17",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
hello = "init:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.14",
    "testcontainers>=3.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/init"]
